--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
+    "react-select": "^5.7.2",
     "react-toastify": "^9.1.2",
     "redux-persist": "^6.0.0",
     "yup": "^1.0.2"
